Documentacion del Update de personaje creada
